# Parnassus

./: .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  Parnassus.cabal  TODO.txt  cabal.project  package.yaml  stack.yaml  test.hs
Data/: Counter.hs
Data/Music/: Lilypond.hs
Data/Music/Lilypond/: IO.hs  Music.hs  Pitch.hs  Score.hs  Utils.hs  Value.hs
Math/: Dist.hs  Markov.hs  Multiarray.hs  Optimize.hs  Search.hs
Misc/: Utils.hs
Music/: Convert.hs  Dynamics.hs  Lilypond.hs  Midi.hs  Pitch.hs  Primes.hs  Rhythm.hs  SoundFont.hs  Tuning.hs  Types.hs  Wave.hs
Music/Lilypond/: Dynamics.hs  IO.hs  Literal.hs  Music.hs  MusicL.hs  Parse.hs  Score.hs  Symbols.hs  Value.hs
Music/Species/: Base.hs  First.hs
Music/Tuning/: Optimize.hs  Tun.hs
Music/Types/: MusicD.hs  MusicT.hs  MusicU.hs
Parnassus/: Dist.hs  Markov.hs  Midi.hs  Music.hs  MusicBase.hs  MusicD.hs  MusicU.hs  Optimize.hs  Primes.hs  Search.hs  SoundFont.hs  Species.hs  Tuning.hs  Utils.hs  Wave.hs
Parnassus/Math/: Dist.hs  Markov.hs  Optimize.hs  Search.hs
Parnassus/Music/: MusicBase.hs  MusicD.hs  MusicU.hs
Parnassus/Species/: Base.hs  First.hs
notes/: species.txt
parnassus/: Command.hs  Convert.hs  Main.hs  Play.hs  SoundFont.hs  Synth.hs
parnassus/Command/: Convert.hs  Midi.hs  SoundFont.hs
scripts/: convertBWV528.hs  modifyTimeSigs.hs  retuneSoundFont.hs  soundFonts.hs
scripts/bwv528/: convert.hs
test/: Spec.hs  TestDist.hs  TestLilypond.hs  TestMarkov.hs  Twinkle.hs  alice.txt
test/Test/: Dist.hs  Markov.hs  Tun.hs  Twinkle.hs
test/data/: 19EDO_v1.tun  19EDO_v2.tun
tunes/test/input/: bells.mid  birthday.mid  birthday16.mid  birthday8.mid  entertainer16.mid  entertainer32.mid  invention.mid  pachelbel.mid  turkish_march.mid  turkish_march16.mid  twinkle.mid  wedding_march.mid  zelda.mid  zelda16.mid
