cabal-version:  3.6
name:           Parnassus
version:        0.2.0
author:         Jeremy Silver
maintainer:     jeremys@nessiness.com
copyright:      2018-2022 Jeremy Silver
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Math.Dist
      Math.Markov
      Math.Multiarray
      Math.Optimize
      Math.Search
      Misc.Utils
      Music.Convert
      Music.Dynamics
      Music.Lilypond
      Music.Lilypond.IO
      Music.Lilypond.Literal
      Music.Lilypond.MusicL
      Music.Lilypond.Parse
      Music.Lilypond.Score
      Music.Lilypond.Symbols
      Music.Pitch
      Music.Primes
      Music.Rhythm
      Music.SoundFont
      Music.Species.Base
      Music.Species.First
      Music.Tuning
      Music.Types
      Music.Types.MusicD
      Music.Types.MusicT
      Music.Types.MusicU
      Music.Wave
  other-modules:
      Paths_Parnassus
  hs-source-dirs:
      ./
  build-depends:
      Euterpea >=2.1.0
    , HCodecs >=0.5.2
    , MonadRandom >=0.1
    , QuickCheck >=2.13
    , WAVE
    , aeson >=2.0
    , array >=0.5
    , base >=4.7
    , containers >=0.6
    , counter >=0.1
    , data-default >=0.7
    , deepseq >=1.4
    , directory >=1.3
    , filepath >=1.4
    , hmatrix >=0.20
    , log-domain >=0.12
    , monad-loops >=0.4
    , mtl >=2.2
    , music-pitch-literal >=1.7
    , parsec >=3.1
    , parsec-class >=1.0
    , parsec3-numbers >=0.1
    , prettify >=1.0
    , process >=1.6
    , random >=1.1
    , range >=0.3
    , search-algorithms >=0.3
    , sort >=1.0
    , split >=0.2
    , text >=1.2
    , time >=1.9
    , tuple >=0.3
    , unix >=2.7
    , vector >=0.12
    , vector-space >=0.15
  ghc-options: -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-orphans -Wno-type-defaults -Wno-unused-do-bind
--   default-language: GHC2021

executable parnassus
  main-is: Main.hs
  other-modules:
      Convert
    , SoundFont
  -- other-extensions:
  build-depends:
      aeson >=2.0
    , base >=4.7
    , directory >=1.3
    , Euterpea >=2.1.0
    , filepath >=1.4
    , optparse-applicative >=0.17
    , Parnassus
  hs-source-dirs: parnassus
--   default-language: GHC2021

test-suite Parnassus-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      TestDist
      TestMarkov
      Twinkle
      Paths_Parnassus
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Euterpea >=2.1.0
    , HCodecs >=0.5.2
    , MonadRandom >=0.1
    , Parnassus
    , QuickCheck >=2.13
    , WAVE
    , aeson >=2.0
    , array >=0.5
    , base >=4.7
    , containers >=0.6
    , counter >=0.1
    , data-default >=0.7
    , deepseq >=1.4
    , directory >=1.3
    , filepath >=1.4
    , hmatrix >=0.20
    , log-domain >=0.12
    , monad-loops >=0.4
    , mtl >=2.2
    , music-pitch-literal >=1.7
    , parsec >=3.1
    , parsec-class >=1.0
    , parsec3-numbers >=0.1
    , prettify >=1.0
    , process >=1.6
    , random >=1.1
    , range >=0.3
    , search-algorithms >=0.3
    , sort >=1.0
    , split >=0.2
    , text >=1.2
    , time >=1.9
    , tuple >=0.3
    , unix >=2.7
    , vector >=0.12
    , vector-space >=0.15
--   default-language: GHC2021
